tests/rosetta/out/Swift/almost-prime.swift
// Generated by Mochi compiler v0.10.26 on 2025-07-16T13:16:02Z
func kPrime(_ n: Int, _ k: Int) -> Bool {
    var nf = 0
    var i = 2
    while i <= n {
        while n % i == 0 {
            if nf == k {
                return false
            }
            nf = nf + 1
            n = n / i
        }
        i = i + 1
    }
    return nf == k
}
func gen(_ k: Int, _ count: Int) -> [Int] {
    var r: [Int] = []
    var n = 2
    while r.count < count {
        if kPrime(n, k) {
            r = r + [n]
        }
        n = n + 1
    }
    return r
}
func main() {
    var k = 1
    while k <= 5 {
        print(String(k) + " " + String(gen(k, 10)))
        k = k + 1
    }
}
main()
